Update the following directories

--- a/output/TheWall.html
+++ b/output/TheWall.html
@@ -47,11 +47,13 @@ ul li{
   float:left;
 }
 ul li h2{
+  font-family: 'Coming Soon', cursive;
   font-size:130%;
   font-weight:bold;
   padding-bottom:10px;
 }
-ul li p{
+ul li p
+{
   font-family: 'Coming Soon', cursive;
   font-size:130%;
 }
@@ -96,10 +98,31 @@ ul li a:hover,ul li a:focus{
 ol{text-align:center;}
 ol li{display:inline;padding-right:1em;}
 ol li a{color:#fff;}
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 700px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
 </style>
 </head>
 <body>
-
 <ul>
 	<li>
 		<a href="#">
@@ -174,4 +197,6 @@ ol li a{color:#fff;}
 		<p>God always proptects us when we love him. Because God loves us very much</p>
 		</a>	</li>
 </ul>
+<h1> Images </h1>
+<p>The following images were taken from <a href="http://sweetpublishing.com">http://sweetpublishing.com </a></p>
 </body>
